--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-scripts": "5.0.1",
