--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-alice-carousel": "^2.6.4",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-html-parser": "^2.0.2",
     "react-scripts": "5.0.1",
     "tss-react": "^4.1.3",
